Fixing text-align of footer ul

--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -525,5 +525,5 @@ ul.row {
     color: var(--text-color);
 }
 .footer ul {
-    text-align: center;
+    text-align: right;
 }
